--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,15 @@
 </head>
 <body style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgb(0, 0, 0)),
 url(https://images.unsplash.com/photo-1524334228333-0f6db392f8a1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80);">
+	<div class="promo promo-disable">Приветствую. Это инструкция для проверяющих.<br>
+		Кодовые фразы управления: weather или погода - прослушать погоду. так же её можно прослушать 
+		нажав на кнопку динамик<br>
+		louder или громче - сделать громче<br>
+		quieter или тише - сделать тише<br>
+		background или фон - поменять фон<br>
+		по всем вопросам стучите в телегу <a target="_blank" href="https://t.me/bitcoinking24">telegram</a><br>
+		для скрытия этого блока кликните по нему два раза
+	</div>
 	<div class="header">
 		<div class="switches">
 			<button class="background-switcher btn">
@@ -20,15 +29,22 @@ url(https://images.unsplash.com/photo-1524334228333-0f6db392f8a1?ixlib=rb-1.2.1&
 			<button class="ru-lang btn">RU</button>
 			<button class="be-lang btn">BE</button>
 			<button class="fahrenheit btn">°F</button>
-			<button class="celsium btn">°C</button>
+			<button class="celsium btn btn-active">°C</button>
+			<button class="voice btn">
+				<i class="fa fa-volume-up" aria-hidden="true"></i>
+			</button>
 		</div>
 		<div class="search">
 			<form class="form">
+				<button type="button" class="btn-microphone btn">
+					<i class="fa fa-microphone" aria-hidden="true"></i>
+				</button>
 				<input class="input-search" type="text">
 				<button type="submit" class="btn-search btn">
 					<i class="fa fa-search" aria-hidden="true"></i>
 				</button>
 			</form>
+			<div class="errors"></div>
 		</div>
 	</div>
 	<div class="main">
