--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,7 @@
 	<script src="https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.js"></script>
 	<link href="https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.css" rel="stylesheet" />
 </head>
-<body style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgb(0, 0, 0)),
-url(https://images.unsplash.com/photo-1524334228333-0f6db392f8a1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80);">
+<body>
 	<div class="promo promo-disable">Приветствую. Это инструкция для проверяющих.<br>
 		Кодовые фразы управления: weather или погода - прослушать погоду. так же её можно прослушать 
 		нажав на кнопку динамик<br>
@@ -114,5 +113,9 @@ url(https://images.unsplash.com/photo-1524334228333-0f6db392f8a1?ixlib=rb-1.2.1&
 			<div class="longitude-container"><span data-i18n="longitude"></span><span class="longitude"></span></div>
 		</div>
 	</div>
+	<div class="background-container">
+		<img class="background" src="https://images.unsplash.com/photo-1524334228333-0f6db392f8a1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80" alt="wallpaper">
+	</div>
+	<div class="overlay"></div>
 <script src="app.bundle.js"></script></body>
 </html>
