--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,14 @@
 	<link href="https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.css" rel="stylesheet" />
 </head>
 <body>
-	<div class="promo promo-disable">Приветствую. Это инструкция для проверяющих.<br>
+	<div class="promo">Приветствую. Это инструкция для проверяющих.<br>
 		Кодовые фразы управления: weather или погода - прослушать погоду. так же её можно прослушать 
 		нажав на кнопку динамик<br>
 		louder или громче - сделать громче<br>
 		quieter или тише - сделать тише<br>
 		background или фон - поменять фон<br>
+		доп.функционал: нажав на любое место на карте произойдет поиск и выведет погоду и все остальные данные для
+		этого места<br>
 		по всем вопросам стучите в телегу <a target="_blank" href="https://t.me/bitcoinking24">telegram</a><br>
 		для скрытия этого блока кликните по нему два раза
 	</div>
